@@ -10,3 +10,4 @@ pm_to_blib*
 cover_db
 pod2htm*.tmp
 CGI-Info-*
+.git
